--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-Danh sách các file môn lý thuyết mạch điện 1: 
+Danh sách các file môn lý thuyết mạch điện 1: <br>
+<a href="/slideThaySonChuong3.html">Slide Thầy Sơn Chương 3</a>
 <br> Đang update....
