--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 Danh sách các file môn lý thuyết mạch điện 1: <br>
-<a href="/slideThaySonChuong3.html">Slide Thầy Sơn Chương 3</a>
+<a href="/slideThaySonChuong3.html">Slide Thầy Sơn Chương 3</a><br>
+<a href="/slideThaySonChuong4.html">Slide Thầy Sơn Chương 4</a>
 <br> Đang update....
