--- a/slideThaySonChuong3.html
+++ b/slideThaySonChuong3.html
@@ -1,32 +1,32 @@
-<img src="SlideThaySon/chuong3/page0.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page1.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page2.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page3.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page4.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page5.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page6.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page7.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page8.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page9.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page10.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page11.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page12.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page13.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page14.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page15.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page16.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page17.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page18.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page19.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page20.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page21.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page22.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page23.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page24.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page25.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page26.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page27.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page28.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page29.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page30.jpg" width="1080" height="1527"><br>
-<img src="SlideThaySon/chuong3/page31.jpg" width="1080" height="1527"><br>
+<img src="SlideThaySon/chuong3/page0.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page1.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page2.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page3.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page4.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page5.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page6.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page7.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page8.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page9.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page10.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page11.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page12.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page13.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page14.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page15.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page16.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page17.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page18.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page19.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page20.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page21.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page22.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page23.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page24.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page25.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page26.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page27.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page28.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page29.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page30.jpg" width="1080" ><br>
+<img src="SlideThaySon/chuong3/page31.jpg" width="1080" ><br>
